<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:padding="0dp"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/bt_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_center_pop_radio_bt_height"
            android:gravity="center"
            android:layout_marginLeft="@dimen/user_center_15_dp"
            android:layout_marginRight="@dimen/user_center_15_dp"
            android:background="@drawable/btn_user_center_up"
            android:textColor="@color/green_text"
            android:textSize="@dimen/user_center_text_20_sp"
            android:text="@string/photo_selector_camera" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_center_1_dp"
            android:layout_marginLeft="@dimen/user_center_15_dp"
            android:layout_marginRight="@dimen/user_center_15_dp"
            android:background="@color/global_separator"/>
        <Button
            android:id="@+id/bt_photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_center_pop_radio_bt_height"
            android:gravity="center"
            android:layout_marginLeft="@dimen/user_center_15_dp"
            android:layout_marginRight="@dimen/user_center_15_dp"
            android:background="@drawable/btn_user_center_down"
            android:textColor="@color/green_text"
            android:textSize="@dimen/user_center_text_20_sp"
            android:text="@string/photo_selector_photo"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_center_pop_radio_bt_height"
        android:layout_marginTop="@dimen/user_center_8_dp"
        android:layout_marginBottom="@dimen/user_center_8_dp"
        android:layout_marginLeft="@dimen/user_center_15_dp"
        android:layout_marginRight="@dimen/user_center_15_dp"
        android:background="@drawable/btn_user_center"
        android:gravity="center"
        android:textColor="@color/global_title_text"
        android:textSize="@dimen/user_center_text_20_sp"
        android:text="@string/photo_selector_cancel"/>
</LinearLayout>
